# microservice-rust

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yaml
.circleci/: config.yml
proto/: service.proto
src/: .lib.rs.swp  .proto.rs.swp  config.rs  crdb.rs  error.rs  lib.rs  main.rs  model.rs  proto.rs  service.rs  service_grpc.rs  store.rs  timestamp.rs  todo.rs
