[package]
name = "microservice-rust"
version = "0.1.0"
authors = ["KentaKudo <yd37574@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
tokio-postgres = { version = "0.7.2", features = ["with-uuid-0_8"] }
uuid = "0.8.2"

[build-dependencies]
tonic-build = "0.4"

