[package]
name = "microservice-rust"
version = "0.1.0"
authors = ["KentaKudo <yd37574@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"
prost = "0.7"
postgres = "0.19"

[build-dependencies]
tonic-build = "0.4"

