[package]
name = "microservice-rust"
version = "0.1.0"
authors = ["KentaKudo <yd37574@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.8"
log = "0.4"
mockall = "0.10"
prost = "0.7"
prost-types = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.2", features = ["with-uuid-0_8", "with-chrono-0_4"] }
tonic = "0.4"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.4"

